package com.company;

import java.util.ArrayList;

public class Tournament {

private FileIO fileIO = new FileIO();




    public void startMatch(){

    }
    public void endMatch(){

    }
    public void currentMatch(){

    }
    public void getMatchHistory(){

    }
}
