@startuml
'https://plantuml.com/class-diagram
class Tournament
class Match
class Result
class textUI
class fileIO
class Team


Main *-- Tournament
Tournament *-- Match
Match *-- Team
Tournament *-- Result
Tournament *-- TextUI
Tournament *-- FileIO
Team *-- Player

Main : public static void main(String[] args)

Tournament : startMatch();
Tournament : endMatch();
Tournament : currentMatch();
Tournament : getMatchHistory();

Match : int startTime
Match : int endTime
Match : getMatchTime();

Result : addResultToTeam();

TextUI : registerTeam();
TextUI : showTeams();
TextUI : showResults();
TextUI : getTeamPlacement();
TextUI : showAllMatches();
TextUI : showNextMatch();

FileIO : writeTeamData();
FileIO : readTeamData();
FileIO : saveData();

Team : String teamName
Team : int teamSize
Team : String[] teamPlayers
Team : teamScore
Team : teamPosition
Team : @ toString();
Team : getTeamName();
Team : getTeamSize();
@enduml